# slint-backend-linuxfb

./: .gitignore  Cargo.toml  README.md  bindings.h  build.rs
examples/demo/: Cargo.toml  build.rs
examples/demo/.cargo/: config.toml
examples/demo/scripts/: .build_config  01_setup_toolchain.sh  02_build_lapack.sh  03_build_xkeyboard-config.sh  arm-gnueabihf-toolchain.cmake  arm-musleabihf-toolchain.cmake  meson-arm-gnueabihf.ini  meson-arm-musleabihf.ini  setup_environment.sh
examples/demo/src/: main.rs
examples/demo/ui/: demo.slint
src/: error.rs  input.rs  lib.rs  pixels.rs  platform.rs  window.rs
src/input/: keyboard.rs  touch.rs
src/linuxfb/: LICENSE  README.md  double.rs  fbio.rs  mod.rs  proc.rs
